test/e2e/features/compression/testdata/tp-route-decompression.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-decompression
  namespace: kgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httpbin-route-uncompressed
  compression:
    requestDecompression: {}
