test/e2e/features/compression/testdata/tp-route-negotiation.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-compression
  namespace: kgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httpbin-route-compressed
  compression:
    responseCompression:
      libraries:
        - Brotli
        - Gzip
